# LaserTherm

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  bisectBash  bisectScript.py  conanfile.py  conanfile.txt  justfile
cmake/Modules/: function-check_version_compatibility.cmake  function-git_version.cmake  function-parse_version.cmake  macro-find_project_dependency.cmake
doc/presentations/: setup.sh
doc/presentations/Overview/: slides.md
doc/writups/: .gitignore
doc/writups/1DSteadyState/: 1DSteadyStateSolver.tex
doc/writups/2DCylindricalCoordinates/FiniteDifferenceRDependence/: FiniteDifferenceRDependence.out  FiniteDifferenceRDependence.tex
doc/writups/AutoConvergeTimeStepping/: .vimrc  AutoConvergeTimeStepping.dvi  AutoConvergeTimeStepping.tex  Makefile
doc/writups/BoundaryConditions/: FiniteDifferenceBoundaryConditions.dvi  FiniteDifferenceBoundaryConditions.tex
doc/writups/BroadBandSources/: main.tex  measured.txt  spectrum-example.gnuplot
doc/writups/Explicit/: _2DCylindrical.tex
doc/writups/MonteCarloLightTransport/2DCylindricalCoords/: 2DCylindricalCoords.tex
doc/writups/Validation/AnalyticalSolutions/: AnalyticalSolutions.out  AnalyticalSolutions.tex
src/LaserTherm/: Emitter.hpp  MaterialStructure.hpp
src/LaserTherm/Configuration/: Builders.hpp  Manager.cpp  Manager.hpp  ptree_utils.cpp  ptree_utils.hpp
src/LaserTherm/Emitters/: Basic.hpp
src/LaserTherm/HeatSolvers/: BoundaryConditions.hpp
src/LaserTherm/HeatSolvers/_1D/: BoundaryConditions.hpp  CrankNicholson.hpp  Explicit.hpp  FiniteDifferenceHeatSolver.hpp  FiniteDifferenceSolver.hpp
src/LaserTherm/HeatSolvers/_1D/Cartesian/: CrankNicholson.hpp  Explicit.hpp
src/LaserTherm/HeatSolvers/_2D/Cylindrical/: Explicit.hpp  Explicit.hpp.tmp  ExplicitBase.hpp  FiniteDifferenceHeatSolver.hpp  NonUniformExplicit.hpp  UniformExplicit.hpp
src/LaserTherm/HeatSolvers/_2D/CylindricalCoordinates/: FiniteDifferenceHeatSolver.hpp
src/LaserTherm/HeatSources/_1D/: BeersLaw.hpp  FiniteDifferenceHeatSource.hpp
src/LaserTherm/HeatSources/_1D/Cartesian/: BeersLaw.hpp
src/LaserTherm/Materials/: Basic.hpp  Mixins.hpp  Types.hpp
src/LaserTherm/Simulations/: SingleEmitterExposure.hpp
src/LaserTherm/Structures/_1D/: AnyStructure.hpp  Infinite.hpp  Slab.hpp
src/LaserTherm/Structures/_1D/Cartesian/: Slab.hpp
src/LaserTherm/Structures/_2D/Cylindrical/: Infinite.hpp
src/LaserTherm/Utils/: Concepts.hpp  FiniteDifference.hpp  Mixins.hpp  TriDiagonalSolver.hpp  TypeTags.hpp  TypeTraits.hpp
src/LaserTherm/Waveforms/: ContinuousWave.hpp  Mixins.hpp  RegularPulseTrain.hpp  SinglePulse.hpp
testing/: CMakeLists.txt  pre-tag-release.sh
testing/CatchTests/: Devel.cpp  Emitters.cpp  Integrations.cpp  Structures.cpp  Structures.hpp
testing/CatchTests/Benchmarks/: Optimizing.cpp
testing/CatchTests/Builders/: Structures.cpp
testing/CatchTests/Configuration/: Manager.cpp  ptree_utils.cpp
testing/CatchTests/HeatSolvers/_1D/: CrankNicholson.cpp
testing/CatchTests/HeatSolvers/_2D/: Explicit.cpp
testing/CatchTests/HeatSources/_1D/: BeersLaw.cpp
testing/CatchTests/Materials/: BasicMaterial.cpp
testing/CatchTests/Simulations/: SingleEmitterExposure.cpp
testing/CatchTests/Waveforms/: Mixins.cpp  Waveforms.cpp
testing/include/: Benchmark.hpp  catch.hpp
